--- a/app/src/main/res/layout/activity_menu.xml
+++ b/app/src/main/res/layout/activity_menu.xml
@@ -24,18 +24,31 @@
             android:scaleType="centerCrop"
             app:srcCompat="@drawable/_616_copy" />
 
-        <TextView
+        <androidx.cardview.widget.CardView
+            android:layout_width="300dp"
+            android:layout_height="match_parent"
+            android:layout_gravity="center"
+            android:layout_marginTop="20dp"
+            android:layout_weight="1"
+            android:background="#FF9800"
+            android:backgroundTint="#FF9800"
+            app:cardCornerRadius="50dp"
+            app:cardElevation="40dp">
 
-            android:id="@+id/textView1"
-            android:layout_width="match_parent"
-            android:layout_height="75dp"
-            android:fontFamily="sans-serif"
-            android:gravity="center"
-            android:text="@string/study"
-            android:textAllCaps="true"
-            android:textColor="#FF9800"
-            android:textSize="48sp"
-            android:textStyle="bold" />
+            <TextView
+
+                android:id="@+id/textView1"
+                android:layout_width="400dp"
+                android:layout_height="75dp"
+                android:layout_gravity="center"
+                android:fontFamily="sans-serif"
+                android:gravity="center"
+                android:text="@string/study"
+                android:textAllCaps="true"
+                android:textColor="#FFFFFF"
+                android:textSize="48sp"
+                android:textStyle="bold" />
+        </androidx.cardview.widget.CardView>
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -126,18 +139,31 @@
 
         </LinearLayout>
 
-        <TextView
-            android:id="@+id/textView"
-            android:layout_width="match_parent"
+        <androidx.cardview.widget.CardView
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_gravity="center"
             android:layout_marginTop="50dp"
-            android:fontFamily="sans-serif"
-            android:gravity="center"
-            android:text="@string/hostel_and_mess"
-            android:textAllCaps="true"
-            android:textColor="#FF9800"
-            android:textSize="48sp"
-            android:textStyle="bold" />
+            android:layout_weight="1"
+            android:background="#FF9800"
+            android:backgroundTint="#FF9800"
+            app:cardCornerRadius="50dp"
+            app:cardElevation="40dp">
+
+            <TextView
+
+                android:id="@+id/textView"
+                android:layout_width="400dp"
+                android:layout_height="match_parent"
+                android:layout_gravity="center"
+                android:fontFamily="sans-serif"
+                android:gravity="center"
+                android:text="@string/hostel_and_mess"
+                android:textAllCaps="true"
+                android:textColor="#FFFFFF"
+                android:textSize="48sp"
+                android:textStyle="bold" />
+        </androidx.cardview.widget.CardView>
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -183,18 +209,31 @@
 
         </LinearLayout>
 
-        <TextView
-            android:id="@+id/textView3"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+        <androidx.cardview.widget.CardView
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:layout_gravity="center"
             android:layout_marginTop="50dp"
-            android:fontFamily="sans-serif"
-            android:gravity="center"
-            android:text="Resources"
-            android:textAllCaps="true"
-            android:textColor="#FF9800"
-            android:textSize="48sp"
-            android:textStyle="bold" />
+            android:layout_weight="1"
+            android:background="#FF9800"
+            android:backgroundTint="#FF9800"
+            app:cardCornerRadius="50dp"
+            app:cardElevation="40dp">
+
+            <TextView
+
+                android:id="@+id/textView3"
+                android:layout_width="400dp"
+                android:layout_height="75dp"
+                android:layout_gravity="center"
+                android:fontFamily="sans-serif"
+                android:gravity="center"
+                android:text="Resources"
+                android:textAllCaps="true"
+                android:textColor="#FFFFFF"
+                android:textSize="48sp"
+                android:textStyle="bold" />
+        </androidx.cardview.widget.CardView>
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -245,19 +284,31 @@
 
         </LinearLayout>
 
-        <TextView
-            android:id="@+id/textView4"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+        <androidx.cardview.widget.CardView
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:layout_gravity="center"
             android:layout_marginTop="50dp"
-            android:fontFamily="sans-serif"
-            android:gravity="center"
-            android:text="Miscellaneous"
-            android:textAlignment="center"
-            android:textAllCaps="true"
-            android:textColor="#FF9800"
-            android:textSize="40sp"
-            android:textStyle="bold" />
+            android:layout_weight="1"
+            android:background="#FF9800"
+            android:backgroundTint="#FF9800"
+            app:cardCornerRadius="50dp"
+            app:cardElevation="40dp">
+
+            <TextView
+
+                android:id="@+id/textView4"
+                android:layout_width="400dp"
+                android:layout_height="match_parent"
+                android:layout_gravity="center"
+                android:fontFamily="sans-serif"
+                android:gravity="center"
+                android:text="Miscellaneous"
+                android:textAllCaps="true"
+                android:textColor="#FFFFFF"
+                android:textSize="40sp"
+                android:textStyle="bold" />
+        </androidx.cardview.widget.CardView>
 
         <LinearLayout
             android:layout_width="match_parent"
